--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ h1 {
   font-size: 18px;
 }
 
+.account-list-account.hidden-account {
+  background-color: gray !important;
+}
+
 .account-list-account a {
   text-decoration: none;
   color: black;
